made OPENAI_API_KEY optional

--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache API Key Generation Demo v0.4\n",
+        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache API Key Generation Demo v0.5\n",
         "\n",
         "Welcome to our dynamic, interactive demonstration. This guide will walk you through the process of generating your own API Key and Token, empowering you to harness the capabilities of PromptMule. As a cloud-based cache for generative AI applications, PromptMule provides a platform for swift data retrieval and storage, enhancing the overall performance and efficiency of your AI development workflows. This demo is tailor-made for a Google Colaboratory runtime environment, offering an exciting journey into the dispatch of prompts via OpenAI and the testing of cache functionalities.\n",
         "\n",
@@ -70,6 +70,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# This sets up the endpoints so that we can call them as needed, it makes the code a little more readable too.\n",
         "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
         "REGISTRATION = 'dev-signup' # registration for a developer\n",
         "LOGIN = 'login'\n",
@@ -100,9 +101,9 @@
         "#@markdown Below replace the capital LETTERS with your information, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
         "\n",
         "your_new_username = \"YOUR_NEW_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"YOUR_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
-        "your_same_old_email = \"YOUR_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"YOUR_APPNAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_new_password = \"YOUR_NEW_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "your_real_email = \"YOUR_REAL_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"YOUR_APP_NAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "#@markdown ---\n"
       ],
       "metadata": {
@@ -131,7 +132,7 @@
         "data_raw = {\n",
         "    \"username\": your_new_username,\n",
         "    \"password\": your_new_password,\n",
-        "    \"email\": your_same_old_email\n",
+        "    \"email\": your_real_email\n",
         "}"
       ],
       "metadata": {
@@ -152,6 +153,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# this will set up the endpoint, and send the request to register\n",
         "promptmule = ENDPOINT + REGISTRATION\n",
         "registration = requests.request(\"POST\", promptmule, headers=headers, json=data_raw)"
       ],
@@ -164,7 +166,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Handle Registration API response\n",
+        "# This code will check the response, handle Registration API response\n",
         "if registration.status_code == 200:\n",
         "    print(\"Registration successful: \", json.dumps(json.loads(registration.text), indent=4))\n",
         "else:\n",
@@ -396,21 +398,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# @title Form to update python variables\n",
-        "#@markdown Input your OpenAI API key here. To obtain an OpenAI API key (https://platform.openai.com/account/api-keys), OR sign up on the OpenAI website, provide necessary information, and upon approval, you'll be issued an API key to authenticate your requests to the API.\n",
-        "\n",
-        "OPENAI_API_KEY = 'YOUR_OPENAI_KEY' #@param {type: \"string\"} # this is your OpenAI API Key, it may impact your model choice\n",
-        "#@markdown ---\n"
-      ],
-      "metadata": {
-        "id": "sR6ysXWSq--7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "We need to update the headers for the Prompt API call, per below with Authorization which is different than previous calls using your API Token, and x-api-key which is your PromptMule API-Key, and your OpenAI API-Key."
@@ -433,7 +420,6 @@
         "headers = {           # this is the /prompt endpoint header\n",
         "    'Authorization': api_token,\n",
         "    'x-api-key': api_key,\n",
-        "    'openai-key': OPENAI_API_KEY,\n",
         "    'Content-Type': 'application/json'\n",
         "    }\n",
         "\n",
