--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "source": [
         "# This sets up the endpoints so that we can call them as needed, it makes the code a little more readable too.\n",
-        "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
+        "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/live/'\n",
         "REGISTRATION = 'dev-signup' # registration for a developer\n",
         "LOGIN = 'login'\n",
         "KEY_GEN = 'api-keys'\n",
@@ -433,16 +433,6 @@
         "    ],\n",
         "    \"max_tokens\": \"50\",\n",
         "    \"temperature\": \"0.99\",\n",
-        "    \"top_p\": \"1\",\n",
-        "    \"n\": \"1\",\n",
-        "    \"logprobs\": \"null\",\n",
-        "    \"stop\": \"null\",\n",
-        "    \"suffix\": \"null\",\n",
-        "    \"echo\": \"true\",\n",
-        "    \"presence_penalty\": \"0\",\n",
-        "    \"frequency_penalty\": \"0\",\n",
-        "    \"best_of\": \"1\",\n",
-        "    \"logit_bias\": \"null\",\n",
         "    \"user\": your_new_username,\n",
         "    \"api\": \"openai\",    # this is used to denote openai as the destination\n",
         "    \"semantic\": \"0.99\", # this denotes the semantic match percentage in the cache\n",
