updated version number

--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,9 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "---\n",
-        "\n",
-        "## Introduction to OpenAI + PromptMule Semantic Cloud Cache API Key Generation Demo v0.5\n",
+        "## Introduction to OpenAI + PromptMule Cloud Cache API Key Generation Demo v0.5.1\n",
         "\n",
         "Welcome to our dynamic, interactive demonstration. This guide will walk you through the process of generating your own API Key and Token, empowering you to harness the capabilities of PromptMule. As a cloud-based cache for generative AI applications, PromptMule provides a platform for swift data retrieval and storage, enhancing the overall performance and efficiency of your AI development workflows. This demo is tailor-made for a Google Colaboratory runtime environment, offering an exciting journey into the dispatch of prompts via OpenAI and the testing of cache functionalities.\n",
         "\n",
