--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to OpenAI + PromptMule Cloud Cache API Key Generation Demo v0.5.1\n",
+        "## Introduction to OpenAI + PromptMule Cloud Cache API Key Generation Demo v0.5.2\n",
         "\n",
         "Welcome to our dynamic, interactive demonstration. This guide will walk you through the process of generating your own API Key and Token, empowering you to harness the capabilities of PromptMule. As a cloud-based cache for generative AI applications, PromptMule provides a platform for swift data retrieval and storage, enhancing the overall performance and efficiency of your AI development workflows. This demo is tailor-made for a Google Colaboratory runtime environment, offering an exciting journey into the dispatch of prompts via OpenAI and the testing of cache functionalities.\n",
         "\n",
@@ -414,7 +414,7 @@
         "    }\n",
         "\n",
         "api_call_body = {     # this is a /prompt call body example\n",
-        "    \"model\": \"gpt-4-0613\",  # using GPT-4, you must have access to this model, or the call will fail\n",
+        "    \"model\": \"gpt-3.5-turbo-16k\",  # using gpt-3.5-turbo-16k, you must have access to this model, or the call will fail\n",
         "    \"messages\": [\n",
         "        {\n",
         "            \"role\": \"user\",\n",
@@ -499,10 +499,18 @@
         "    if isinstance(value, dict):\n",
         "        print(f\"{key}:\")\n",
         "        for sub_key, sub_value in value.items():\n",
-        "            # Wrap long text\n",
-        "            if isinstance(sub_value, str) and len(sub_value) > 80:\n",
-        "                sub_value = \"\\n\".join(wrapper.wrap(sub_value))\n",
-        "            print(f\"    {sub_key}: {sub_value}\")\n",
+        "            if isinstance(sub_value, dict):\n",
+        "                print(f\"    {sub_key}:\")\n",
+        "                for nested_key, nested_value in sub_value.items():\n",
+        "                    # Wrap long text\n",
+        "                    if isinstance(nested_value, str) and len(nested_value) > 80:\n",
+        "                        nested_value = \"\\n\".join(wrapper.wrap(nested_value))\n",
+        "                    print(f\"        {nested_key}: {nested_value}\")\n",
+        "            else:\n",
+        "                # Wrap long text\n",
+        "                if isinstance(sub_value, str) and len(sub_value) > 80:\n",
+        "                    sub_value = \"\\n\".join(wrapper.wrap(sub_value))\n",
+        "                print(f\"    {sub_key}: {sub_value}\")\n",
         "    else:\n",
         "        # Wrap long text\n",
         "        if isinstance(value, str) and len(value) > 80:\n",
@@ -512,7 +520,7 @@
         "# Print footer\n",
         "print(\"--------------------------------------------------------\")\n",
         "print(\"                 End of PromptMule API Response\")\n",
-        "print(\"--------------------------------------------------------\")\n"
+        "print(\"--------------------------------------------------------\")"
       ],
       "metadata": {
         "id": "Kze4D9L24CII"
@@ -583,6 +591,54 @@
       ],
       "metadata": {
         "id": "iHDPW2fREJ-B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "report = json.loads(promptmule_response.text)\n",
+        "\n",
+        "# Set up text wrapper\n",
+        "wrapper = textwrap.TextWrapper(width=80)\n",
+        "\n",
+        "# Print header\n",
+        "print(\"--------------------------------------------------------\")\n",
+        "print(\"                  PromptMule API Response\")\n",
+        "print(\"--------------------------------------------------------\")\n",
+        "print(f\"API: {report['api']}\\n\")\n",
+        "\n",
+        "# Iterate over items in the report\n",
+        "for key, value in report.items():\n",
+        "    if isinstance(value, dict):\n",
+        "        print(f\"{key}:\")\n",
+        "        for sub_key, sub_value in value.items():\n",
+        "            if isinstance(sub_value, dict):\n",
+        "                print(f\"    {sub_key}:\")\n",
+        "                for nested_key, nested_value in sub_value.items():\n",
+        "                    # Wrap long text\n",
+        "                    if isinstance(nested_value, str) and len(nested_value) > 80:\n",
+        "                        nested_value = \"\\n\".join(wrapper.wrap(nested_value))\n",
+        "                    print(f\"        {nested_key}: {nested_value}\")\n",
+        "            else:\n",
+        "                # Wrap long text\n",
+        "                if isinstance(sub_value, str) and len(sub_value) > 80:\n",
+        "                    sub_value = \"\\n\".join(wrapper.wrap(sub_value))\n",
+        "                print(f\"    {sub_key}: {sub_value}\")\n",
+        "    else:\n",
+        "        # Wrap long text\n",
+        "        if isinstance(value, str) and len(value) > 80:\n",
+        "            value = \"\\n\".join(wrapper.wrap(value))\n",
+        "        print(f\"{key}: {value}\")\n",
+        "\n",
+        "# Print footer\n",
+        "print(\"--------------------------------------------------------\")\n",
+        "print(\"                 End of PromptMule API Response\")\n",
+        "print(\"--------------------------------------------------------\")"
+      ],
+      "metadata": {
+        "id": "raz2Fvj28faH"
       },
       "execution_count": null,
       "outputs": []
