--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -46,6 +46,26 @@
         "\n",
         "We warmly invite you to dive into this interactive experience and welcome any feedback or questions. Feel free to reach out to us at www.promptmule.com.\n",
         "\n",
+        "**Key Highlights:**\n",
+        "1. **Getting Started:** Open the demo on Google Colab from the GitHub preview page.\n",
+        "2. **API Key Generation:** Detailed, step-by-step instructions for generating a unique PromptMule API Key & Token.\n",
+        "3. **Registration:** Set up the registration API call with headers and user details (username, password, email). A verification email will be sent to confirm.\n",
+        "4. **Token Generation:** Post-email verification, users can log in and generate an API Token.\n",
+        "5. **API Key Usage:** Instructions on incorporating the generated API token for creating an API key.\n",
+        "6. **Prompt & Response Calls:** Demonstrates how to use the generated Token and API key to interact with OpenAI's gpt-3.5-turbo model via chat completion endpoint.\n",
+        "7. **Cache Interaction:** Showcases cache hit scenarios, how to make calls via PromptMule, and the role of various parameters like 'semantic' and 'sem_num'.\n",
+        "8. **Understanding Return Values:** Explanation of key response elements such as 'search_score', 'saved_cost', 'exact_match', and more.\n",
+        "9. **Deleting a User:** Guide on how users can delete their PromptMule username using the DELETE endpoint.\n",
+        "\n",
+        "**Additional Information:**\n",
+        "- Comprehensive demonstration of PromptMule's capabilities coming soon.\n",
+        "- Feedback and inquiries can be made at www.promptmule.com.\n",
+        "- For detailed structuring on OpenAI Request Body Key:Value pairs, users can refer to the official documentation.\n",
+        "\n",
+        "**Target Audience:** Ideal for developers familiar with Google Colab, python, and OpenAI. However, the demo caters to all levels of expertise.\n",
+        "\n",
+        "**Feedback and Collaboration:** We welcome feedback, questions, and contributions from the developer community. Reach out to info@promptmule.com.\n",
+        "\n",
         "---\n",
         "\n",
         "If you're currently in Google Colab (https://colab.research.google.com/): To get started, just click on the \"Run Cell\" button found to the left of the code block. This button is akin to the play button you might recognize from a DVD player. Upon activation, you're encouraged to probe, tinker with, and learn from the code at your own pace.\n",
@@ -383,7 +403,7 @@
         "}\n",
         "```\n",
         "\n",
-        "## 4. Prompt and Response Calls\n",
+        "## 5. Prompt and Response Calls\n",
         "\n",
         "You can now utilize your newly generated Token and API key. These can be used to interact with OpenAI gpt-3.5-turbo model via the chat completion endpoint of OpenAI using our \"Free Tier\" account.\n",
         "\n",
@@ -576,7 +596,7 @@
         "\n",
         "In the following section, we will examine key response elements including: `search_score`, `saved_cost`, and `exact_match`. These variables exhibit altered values when a cache hit, specifically a perfect match, is encountered.\n",
         "\n",
-        "## 5. Considering Return Values\n",
+        "## 6. Considering Return Values\n",
         "\n",
         "- `search_score` (Integer): This represents the percentage match of the returned response. If the value is 1, it denotes a perfect match based on a SHA256 hash.\n",
         "\n",
@@ -817,7 +837,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Handling Errors in Colab or PromptMule API\n",
+        "## 8. Handling Errors in Colab or PromptMule API\n",
         "\n",
         "In the course of running the demo, should you encounter any errors or issues, the Colab environment provides you with features to debug and resolve them.\n",
         "\n",
