--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to OpenAI + PromptMule Cloud Cache API Key Generation Demo v0.5.4\n",
+        "## Introduction to the PromptMule Quickstart Demo v0.5.4\n",
         "\n",
         "> tl;dr: If you are an expert at Google Colab, python, OpenAI (or any of these really) just jump to the code.\n",
         "\n",
