Updated to api.promptmule.com endpoint, minor text changes

--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "## Introduction to the PromptMule Quickstart Demo v0.5.5\n",
         "\n",
-        "> tl;dr: If you are an expert at Google Colab, python, OpenAI (or any of these really) just jump to the code.\n",
+        "> tl;dr: If you have expertise in Google Colab, or OpenAI/python API just jump to the first code block.\n",
         "\n",
         "Welcome to our interactive demo. This guide will walk you through the process of generating your own API Key, empowering you to harness the capabilities of PromptMule. As a cloud-based cache for generative AI applications, PromptMule provides a platform for swift data retrieval and storage, enhancing the overall performance and efficiency of your AI development workflows. This demo is tailor-made for a Google Colaboratory runtime environment, offering an exciting journey into the dispatch of prompts via OpenAI and the testing of cache functionalities.\n",
         "\n",
@@ -97,12 +97,12 @@
       "cell_type": "code",
       "source": [
         "# This sets up the endpoints so that we can call them as needed, it makes the code a little more readable too.\n",
-        "ENDPOINT = 'https://820czjhki0.execute-api.us-west-2.amazonaws.com/dev/'\n",
+        "ENDPOINT = 'https://api.promptmule.com/'\n",
         "REGISTRATION = 'dev-signup'   # registration endpoint for a developer\n",
         "LOGIN = 'login'               # login endpoint to get a Token\n",
         "KEY_GEN = 'api-keys'          # API Key generation endpoint\n",
         "PROMPT = 'prompt'             # The prompt endpoint, the working end of the cache\n",
-        "DELETE = 'delete'             # Delete your username endpoint, this is permanent, BE CAREFUL WITH THIS"
+        "DELETE = 'delete/profile/'             # Delete your username endpoint, this is permanent, BE CAREFUL WITH THIS"
       ],
       "metadata": {
         "id": "S6lQNSF2unnW"
@@ -127,10 +127,10 @@
         "# @title Get your Registration Data Setup here { display-mode: \"both\" }\n",
         "#@markdown Below replace the capital LETTERS with your information inside of double quotes, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
         "\n",
-        "your_new_username = \"demo10\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"Abcd@1234!\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
-        "your_real_email = \"mrodgers@gmail.com\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"reportingdemo1\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_new_username = \"CHOOSE_A_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"CHOOSE_A_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "your_real_email = \"YOUR_REAL_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"NAME_OF_YOUR_APPLICATION\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "#@markdown ---\n"
       ],
       "metadata": {
@@ -446,7 +446,7 @@
         "    }\n",
         "\n",
         "api_call_body = {     # this is a /prompt call body example\n",
-        "    \"model\": \"gpt-3.5-turbo-16k\",  # using gpt-3.5-turbo, you must have access to this model, or the call will fail\n",
+        "    \"model\": \"gpt-3.5-turbo-0613\",  # using gpt-3.5-turbo, you must have access to this model, or the call will fail\n",
         "    \"messages\": [\n",
         "        {\n",
         "            \"role\": \"user\",\n",
