--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to the PromptMule Quickstart Demo v0.5.6\n",
+        "## Introduction to the PromptMule Quickstart Demo v0.5.7\n",
         "\n",
         "> tl;dr: If you have expertise in Google Colab, or OpenAI/python API just jump to the first code block.\n",
         "\n",
@@ -127,10 +127,10 @@
         "# @title Get your Registration Data Setup here { display-mode: \"both\" }\n",
         "#@markdown Below replace the capital LETTERS with your information inside of double quotes, pick a username, complex password, real email, and an application name that you will use as a reference in the future.\n",
         "\n",
-        "your_new_username = \"CHOOSE_A_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
-        "your_new_password = \"CHOOSE_A_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
-        "your_real_email = \"YOUR_REAL_EMAIL\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
-        "your_new_appname = \"NAME_OF_YOUR_APPLICATION\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
+        "your_new_username = \"YOUR_NEW_USERNAME\"  #@param {type: \"string\"}  # this is your username, it will need to be unique, else the API will tell you it's not and try again (str)\n",
+        "your_new_password = \"YOUR_NEW_PASSWORD\"    #@param {type: \"string\"} # complex passwords are required (str)\n",
+        "your_real_email = \"YOUR_EMAIL_ADDRESS\" #@param {type: \"string\"} # must be a valid email as it is used in this process to validate (str)\n",
+        "your_new_appname = \"YOUR_NEW_APP_NAME\"    #@param {type: \"string\"}   # this is the application that you are using the promptmule API to build, this app name is unique (str)\n",
         "#@markdown ---\n"
       ],
       "metadata": {
@@ -446,7 +446,7 @@
         "    }\n",
         "\n",
         "api_call_body = {     # this is a /prompt call body example\n",
-        "    \"model\": \"gpt-3.5-turbo-0613\",  # using gpt-3.5-turbo, you must have access to this model, or the call will fail\n",
+        "    \"model\": \"gpt-3.5-turbo\",  # using gpt-3.5-turbo, you must have access to this model, or the call will fail\n",
         "    \"messages\": [\n",
         "        {\n",
         "            \"role\": \"user\",\n",
