--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to the PromptMule Quickstart Demo v0.5.7\n",
+        "## Introduction to the PromptMule Quickstart Demo v0.5.8\n",
         "\n",
         "> tl;dr: If you have expertise in Google Colab, or OpenAI/python API just jump to the first code block.\n",
         "\n",
@@ -98,7 +98,7 @@
       "source": [
         "# This sets up the endpoints so that we can call them as needed, it makes the code a little more readable too.\n",
         "ENDPOINT = 'https://api.promptmule.com/'\n",
-        "REGISTRATION = 'dev-signup'   # registration endpoint for a developer\n",
+        "REGISTRATION = 'signup'   # registration endpoint for a developer\n",
         "LOGIN = 'login'               # login endpoint to get a Token\n",
         "KEY_GEN = 'api-keys'          # API Key generation endpoint\n",
         "PROMPT = 'prompt'             # The prompt endpoint, the working end of the cache\n",
