Updated API-KEYs endpoint and added new index numbers

--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to the PromptMule Quickstart Demo v0.5.8\n",
+        "## Introduction to the PromptMule Quickstart Demo v0.5.9\n",
         "\n",
         "> tl;dr: If you have expertise in Google Colab, or OpenAI/python API just jump to the first code block.\n",
         "\n",
@@ -55,7 +55,8 @@
         "6. **Prompt & Response Calls:** Demonstrates how to use the generated Token and API key to interact with OpenAI's gpt-3.5-turbo model via chat completion endpoint.\n",
         "7. **Cache Interaction:** Showcases cache hit scenarios, how to make calls via PromptMule, and the role of various parameters like 'semantic' and 'sem_num'.\n",
         "8. **Understanding Return Values:** Explanation of key response elements such as 'search_score', 'saved_cost', 'exact_match', and more.\n",
-        "9. **Deleting a User:** Guide on how users can delete their PromptMule username using the DELETE endpoint.\n",
+        "9. **Listing API Keys:** Explains how a to list all of the API keys associated with a user.\n",
+        "10. **Deleting a User:** Guide on how users can delete their PromptMule username using the DELETE endpoint.\n",
         "\n",
         "**Additional Information:**\n",
         "- Comprehensive demonstration of PromptMule's capabilities coming soon.\n",
@@ -102,7 +103,8 @@
         "LOGIN = 'login'               # login endpoint to get a Token\n",
         "KEY_GEN = 'api-keys'          # API Key generation endpoint\n",
         "PROMPT = 'prompt'             # The prompt endpoint, the working end of the cache\n",
-        "DELETE = 'delete/profile/'             # Delete your username endpoint, this is permanent, BE CAREFUL WITH THIS"
+        "LIST_API_KEYS = \"api-keys/\"   # This endpoint lists any API keys you have registered to you, and their app names\n",
+        "DELETE = 'delete/profile/'    # Delete your username endpoint, this is permanent, BE CAREFUL WITH THIS"
       ],
       "metadata": {
         "id": "S6lQNSF2unnW"
@@ -619,21 +621,36 @@
     {
       "cell_type": "code",
       "source": [
+        "headers = {           # this is the /prompt endpoint header\n",
+        "    'x-api-key': api_key,\n",
+        "    'Content-Type': 'application/json'\n",
+        "    }\n",
+        "\n",
+        "api_call_body = {     # this is a /prompt call body example\n",
+        "    \"model\": \"gpt-3.5-turbo\",  # using gpt-3.5-turbo, you must have access to this model, or the call will fail\n",
+        "    \"messages\": [\n",
+        "        {\n",
+        "            \"role\": \"user\",\n",
+        "            \"content\": \"Create a Python function for the chances of seeing a unicorn in Central Park. Assume the probability is the square root of -1.\"\n",
+        "        }\n",
+        "    ],\n",
+        "    \"max_tokens\": \"50\",\n",
+        "    \"temperature\": \"0.0\",\n",
+        "    \"user\": your_new_username,\n",
+        "    \"api\": \"openai\",    # this is used to denote openai as the destination\n",
+        "    \"semantic\": \"0.99\", # this denotes the semantic match percentage in the cache\n",
+        "    \"sem_num\": \"2\"      # this denotes the number of matches to return if found\n",
+        "}\n",
+        "# set up the Prompt endpoint\n",
+        "promptmule = ENDPOINT + PROMPT\n",
+        "# send the prompt call itself\n",
+        "promptmule_response = requests.request(\"POST\", promptmule, headers=headers, json=api_call_body)\n",
         "# Handle response\n",
         "if promptmule_response.status_code == 200:\n",
-        "    print(\"API Response successful:\\n\", json.dumps(json.loads(promptmule_response.text), indent=4))\n",
+        "    print(\"API Response successful:\\n\")\n",
         "else:\n",
-        "    print(f\"API Response failed with status code {promptmule_response.status_code}:\\n\", json.dumps(json.loads(promptmule_response.text), indent=4))"
-      ],
-      "metadata": {
-        "id": "iHDPW2fREJ-B"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "    print(f\"API Response failed with status code {promptmule_response.status_code}:\\n\")\n",
+        "\n",
         "# Parse the JSON data\n",
         "parsed_data = json.loads(promptmule_response.text)\n",
         "\n",
@@ -694,7 +711,84 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 6. Deleting your User\n",
+        "# 7. List all of the user's API-KEYs\n",
+        "Another useful operation you might want to perform is listing all of your API keys currently assigned to your account. This can be really handy when you're trying to manage or audit your keys. Just like with the delete operation, you'll need your Authorization Token for this.\n",
+        "\n",
+        "Let's get down to it, shall we?\n",
+        "\n",
+        "Firstly, make sure to import the `requests` and `json` modules if you haven't already:\n",
+        "\n",
+        "```python\n",
+        "import requests\n",
+        "import json\n",
+        "```\n",
+        "\n",
+        "Then, prepare your headers with the Authorization Token. The token should be the same one you generated before; if it's more than 60 minutes old, you'll need to get a new one:\n",
+        "\n",
+        "```python\n",
+        "headers = {\n",
+        "    'Content-Type': 'application/json',\n",
+        "    'Authorization': 'Bearer ' + api_token  # replace api_token with your actual API token\n",
+        "}\n",
+        "```\n",
+        "\n",
+        "Now, set up the API endpoint for listing API keys. We are assuming you have the base URL stored in a variable named `ENDPOINT` and the specific path for listing API keys in a variable named `LIST_API_KEYS`:\n",
+        "\n",
+        "```python\n",
+        "promptmule_list_keys = ENDPOINT + LIST_API_KEYS\n",
+        "print(\"List Keys Endpoint: \", promptmule_list_keys)\n",
+        "print(\"Headers: \", headers)\n",
+        "print(\"https GET request...\")\n",
+        "```\n",
+        "\n",
+        "Time for the actual GET request to list all your API keys:\n",
+        "\n",
+        "```python\n",
+        "promptmule_response = requests.request(\"GET\", promptmule_list_keys, headers=headers)\n",
+        "```\n",
+        "\n",
+        "Finally, handle the response to see if everything went smooth:\n",
+        "\n",
+        "```python\n",
+        "if promptmule_response.status_code == 200:\n",
+        "    print(\"Successfully retrieved API keys:\\n\", json.dumps(json.loads(promptmule_response.text), indent=4))\n",
+        "else:\n",
+        "    print(f\"Failed to list API keys, got status code {promptmule_response.status_code}:\\n\", promptmule_response.text)\n",
+        "```\n",
+        "\n",
+        "If you've done everything right, you should see a nicely formatted JSON output of all your API keys. If shit hit the fan, you'll get an error message along with the status code to help you troubleshoot."
+      ],
+      "metadata": {
+        "id": "UiRuA7DgQhel"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "headers = {\n",
+        "    'Content-Type': 'application/json',\n",
+        "    'Authorization': 'Bearer ' + api_token  # replace api_token with your actual API token\n",
+        "}\n",
+        "\n",
+        "promptmule_response = requests.request(\"GET\", promptmule_list_keys, headers=headers)\n",
+        "\n",
+        "if promptmule_response.status_code == 200:\n",
+        "    print(\"Successfully retrieved API keys:\\n\", json.dumps(json.loads(promptmule_response.text), indent=4))\n",
+        "elif promptmule_response.status_code == 401:\n",
+        "    print(f\"Failed to list API keys, got status code 401 Unauthorized-request lacks valid authentication: {promptmule_response.status_code}:\\n\", promptmule_response.text)\n",
+        "else:\n",
+        "    print(f\"Failed to list API keys, got status code {promptmule_response.status_code}:\\n\", promptmule_response.text)"
+      ],
+      "metadata": {
+        "id": "KH3-pfiORHja"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 8. Deleting your User\n",
         "One more thing you can do, is delete your username from PromptMule. This can be done using the DELETE endpoint. You will need your Authorization Token to Delete, which means you will follow the login procedure we described earlier. Note, that a Token lives for only 60 minutes and you MAY need to regenerate one if yours was generated a longer time ago. If not, jump ahead to [here](https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_key_gen_demo.ipynb#scrollTo=SsRDuZ4b0D5R), else...Let's walk through that process real quick."
       ],
       "metadata": {
@@ -855,7 +949,7 @@
       "source": [
         "---\n",
         "\n",
-        "## 8. Handling Errors in Colab or PromptMule API, or Just want to Talk...\n",
+        "## 9. Handling Errors in Colab or PromptMule API, or Just want to Talk...\n",
         "\n",
         "In the course of running the demo, should you encounter any errors or issues, the Colab environment provides you with features to debug and resolve them.\n",
         "\n",
