--- a/promptmule_api_key_gen_demo.ipynb
+++ b/promptmule_api_key_gen_demo.ipynb
@@ -29,9 +29,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XGa2T1whaqhy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## Introduction to the PromptMule Quickstart Demo v0.5.9\n",
+        "## Introduction to the PromptMule Quickstart Demo v0.6.0\n",
         "\n",
         "> tl;dr: If you have expertise in Google Colab, or OpenAI/python API just jump to the first code block.\n",
         "\n",
@@ -711,7 +720,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 7. List all of the user's API-KEYs\n",
+        "# 7. List All of Your API-KEYs\n",
         "Another useful operation you might want to perform is listing all of your API keys currently assigned to your account. This can be really handy when you're trying to manage or audit your keys. Just like with the delete operation, you'll need your Authorization Token for this.\n",
         "\n",
         "Let's get down to it, shall we?\n",
@@ -788,85 +797,53 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 8. Deleting your User\n",
-        "One more thing you can do, is delete your username from PromptMule. This can be done using the DELETE endpoint. You will need your Authorization Token to Delete, which means you will follow the login procedure we described earlier. Note, that a Token lives for only 60 minutes and you MAY need to regenerate one if yours was generated a longer time ago. If not, jump ahead to [here](https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_key_gen_demo.ipynb#scrollTo=SsRDuZ4b0D5R), else...Let's walk through that process real quick."
+        "# 8. Deleting Your User Account\n",
+        "\n",
+        "Deleting your user account from PromptMule is a straightforward process but one that should be taken seriously. This is a \"point of no return\" operation for your current username—unless you re-register it later, assuming no one else grabs it in the meantime. Let's dive into how you can do this using the DELETE endpoint.\n",
+        "\n",
+        "## Pre-requisites\n",
+        "\n",
+        "Before you can delete your account, you'll need an Authorization Token. Each token is valid for 60 minutes, so you might have to regenerate one if you obtained it a while ago. If you've recently logged in and have a valid token, feel free to [skip ahead](https://colab.research.google.com/github/promptmule4real/demo/blob/main/promptmule_api_key_gen_demo.ipynb#scrollTo=SsRDuZ4b0D5R).\n",
+        "\n",
+        "### Obtaining the Authorization Token\n",
+        "\n",
+        "Let's walk through the steps to get a fresh Authorization Token.\n",
+        "\n",
+        "```python\n",
+        "# Import required modules\n",
+        "import requests\n",
+        "import json\n",
+        "\n",
+        "# Prepare headers and data\n",
+        "headers = {\n",
+        "    'Content-Type': 'application/json'\n",
+        "}\n",
+        "\n",
+        "data_raw = {\n",
+        "    \"username\": your_new_username,  # Replace with your username\n",
+        "    \"password\": your_new_password  # Replace with your password\n",
+        "}\n",
+        "\n",
+        "# Initialize login endpoint\n",
+        "promptmule = ENDPOINT + LOGIN\n",
+        "\n",
+        "# Execute POST request\n",
+        "login = requests.request(\"POST\", promptmule, headers=headers, json=data_raw)\n",
+        "\n",
+        "# Evaluate the response\n",
+        "if login.status_code == 200:\n",
+        "    print(\"Token successfully generated:\\n\", json.dumps(json.loads(login.text), indent=4))\n",
+        "else:\n",
+        "    print(f\"Token generation failed. Status code {login.status_code} received:\\n\", json.dumps(json.loads(login.text), indent=4))\n",
+        "```\n",
+        "\n",
+        "### Time to Say Goodbye: Deleting the User Account\n",
+        "\n",
+        "You're all set to remove your account. Say \"hasta la vista\" to your username and let's proceed.\n",
+        "\n"
       ],
       "metadata": {
         "id": "XBr4x8PqwSP7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "First, remember, let's retrieve your Token"
-      ],
-      "metadata": {
-        "id": "gfzCx53TyjRe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "headers = {\n",
-        "    'Content-Type': 'application/json'\n",
-        "           }\n",
-        "\n",
-        "data_raw = {\n",
-        "    \"username\": your_new_username,\n",
-        "    \"password\": your_new_password\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "7tmFXVtj0gXi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "promptmule = ENDPOINT + LOGIN\n",
-        "login = requests.request(\"POST\", promptmule, headers=headers, json=data_raw)"
-      ],
-      "metadata": {
-        "id": "f3XnMBzUyXrX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Next, let's see if the Token was retrieved properly..."
-      ],
-      "metadata": {
-        "id": "64E3K1VUz_RV"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Evaluate response. In case of failure, it will be necessary to revisit the previous step and repeat the POST request.\n",
-        "if login.status_code == 200:\n",
-        "    print(\"Login succeeded:\\n\", json.dumps(json.loads(login.text), indent=4))\n",
-        "else:\n",
-        "    print(f\"Login unsuccessful. Token generation failed. Status code {login.status_code} received:\\n\", json.dumps(json.loads(login.text), indent=4))"
-      ],
-      "metadata": {
-        "id": "WnSR9w9szath"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Here we go Delete-ing!\n",
-        "\n",
-        "Now that we have the Token, we can use it to DELETE our User on the /delete endpoint. NOTE: This is and end-game situation for your username that was created at the beginning of this quickstart demo. So get ready to say \"hasta la vista\" to that username (you can re-take it in the future if someone else hasn't). Here we go, first we set up the header for the API call, then we will set up the endpoint and send it..."
-      ],
-      "metadata": {
-        "id": "SsRDuZ4b0D5R"
       }
     },
     {
@@ -929,6 +906,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "And there you have it. You've successfully deleted your user account from PromptMule. If something went wrong, the error message and status code should provide clues for troubleshooting."
+      ],
+      "metadata": {
+        "id": "Y4VY5EepaD1U"
+      }
     },
     {
       "cell_type": "markdown",
